# fly-in

./: Makefile  README.md  pyproject.toml
src/fly_in/: __init__.py  cli.py  visual.py
src/fly_in/parsing/: Parser.py
