[project]
name = "fly-in"
version = "0.1.0"
description = "An efficient drone routing system that navigates multiple drones through connected zones while minimizing simulation turns and handling movement constraints."
authors = [
    {name = "Blxee",email = "aminedev57@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "lark (>=1.3.1,<2.0.0)"
]

[project.scripts]
flyin = "fly_in.cli:main"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]


[tool.poetry]
packages = [
    { include = "fly_in", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
